# agentfetch-mcp

./: .gitignore  Dockerfile  PUBLISHING.md  README.md  mcp-manifest.json  pyproject.toml  server.json
agentfetch/: __init__.py  config.py
agentfetch/core/: __init__.py  cache.py  cleaner.py  pipeline.py  tokenizer.py  url_safety.py
agentfetch/core/fetchers/: __init__.py  firecrawl.py  jina.py  pdf.py  router.py  trafilatura_fetcher.py
agentfetch/mcp/: __init__.py  server.py
agentfetch/mcp/tools/: __init__.py  estimate.py  fetch_multiple.py  fetch_url.py  search_fetch.py
